xsm section done

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
     <!-- navbar start -->
     <div>
       <nav
-        class="navbar navbar-expand-lg shadow fixed-top fs-4 border-start border-end border-warning border-3 rounded"
+        class="navbar navbar-expand-lg shadow fixed-top fs-4 border-start border-end border-warning rounded"
         data-bs-theme="dark"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand m-0" href="#"
             ><img
-              class="rounded-circle img-fluid mb-4"
+              class="rounded-circle img-fluid my-0"
               src="/image/Untitled_Export_V3.png"
               alt=""
             />
           </a>
           <form class="d-flex me-auto" role="search">
-            <button class="btn btn-lg p-3" type="input">
+            <button class="btn btn-lg p-0 m-0" type="input">
               <i class="fa-regular fa-comments text-warning fs-1 fw-bolder"></i>
             </button>
-            <button class="btn btn-lg" type="submit">
+            <button class="btn btn-lg px-3 m-0" type="submit">
               <i class="bi bi-search text-warning fs-1 fw-lighter"></i>
             </button>
           </form>
@@ -245,7 +245,7 @@
     <div class="container text-center mt-5">
       <div class="row">
         <!-- audi -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -274,7 +274,7 @@
           </div>
         </div>
         <!-- bhuggati -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -304,7 +304,7 @@
           </div>
         </div>
         <!-- bmw -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -334,7 +334,7 @@
           </div>
         </div>
         <!-- ferrai -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -364,7 +364,7 @@
           </div>
         </div>
         <!-- prsch -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -394,7 +394,7 @@
           </div>
         </div>
         <!-- tesla -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -424,7 +424,7 @@
           </div>
         </div>
         <!-- honda -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -454,7 +454,7 @@
           </div>
         </div>
         <!-- rols royce -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -485,7 +485,7 @@
           </div>
         </div>
         <!-- mercedics -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -515,7 +515,7 @@
           </div>
         </div>
         <!--land rovers  -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -545,7 +545,7 @@
           </div>
         </div>
         <!-- ford -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -575,7 +575,7 @@
           </div>
         </div>
         <!-- lamborgini -->
-        <div class="col col-lg-4 col-sm-12">
+        <div class="col col-lg-4 col-sm-12 col-12">
           <div
             class="card mb-3 bg-dark border border-2 border-warning text-light"
           >
@@ -626,7 +626,7 @@
     <div class="container text-center mt-5">
       <div class="row g-4">
         <div
-          class="col col-lg-6 col-sm-12 border rounded border-warning border-1"
+          class="col col-lg-6 col-sm-12 col-12 border rounded border-warning border-1"
         >
           <img
             class="img-fluid"
@@ -635,7 +635,7 @@
           />
         </div>
         <div
-          class="col col-lg-6 col-sm-12 border rounded border-warning border-1"
+          class="col col-lg-6 col-sm-12 col-12 border rounded border-warning border-1"
         >
           <img
             class="img-fluid w-100"
@@ -644,7 +644,7 @@
           />
         </div>
         <div
-          class="col col-lg-6 col-sm-12 border rounded border-warning border-1"
+          class="col col-lg-6 col-12 col-sm-12 border rounded border-warning border-1"
         >
           <img
             class="img-fluid w-100"
@@ -653,12 +653,12 @@
           />
         </div>
         <div
-          class="col col-lg-6 col-sm-12 border rounded border-warning border-1"
+          class="col col-12 col-lg-6 col-sm-12 border rounded border-warning border-1"
         >
           <img class="img-fluid" src="/image/images.jpg" alt="img not found" />
         </div>
         <div
-          class="col col-lg-6 col-sm-12 border rounded border-warning border-1"
+          class="col col-12 col-lg-6 col-sm-12 border rounded border-warning border-1"
         >
           <img
             class="img-fluid"
@@ -667,12 +667,13 @@
           />
         </div>
         <div
-          class="col col-lg-6 col-sm-12 border rounded border-warning border-1"
+          class="col col-12 col-lg-6 col-sm-12 border rounded border-warning border-1"
         >
           <img class="img-fluid" src="/image/sports.jpg" alt="img not found" />
         </div>
       </div>
     </div>
+
     <!-- brand deals section ends -->
     <br />
     <br />
@@ -693,29 +694,40 @@
         TEMERARIO
       </button>
     </div>
-    <div class="container mt-3 d-flex">
-      <h2 class="text-light pe-5 text-uppercase">
-        <span class="vr"></span>
-        Lamborghini introduces unique Apple Vision Pro experience
-      </h2>
-
-      <button class="btn btn-lg btn-outline-warning fw-light">READ MORE</button>
-    </div>
-    <div class="container mt-2">
-      <figcaption class="figure-caption fs-6 text-light">
-        Lamborghini's immersive experience
-        <span class="text-warning">“Unravelling Temerario”</span> debuted at
-        Monterey Car Week
-      </figcaption>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col col-lg-10 col-12">
+          <h2 class="text-light text-uppercase">
+            Lamborghini introduces unique Apple Vision Pro experience
+          </h2>
+          <div class="container mt-2 p-0">
+            <figcaption class="figure-caption text-light py-3">
+              Lamborghini's immersive experience
+              <span class="text-warning">“Unravelling Temerario”</span> debuted
+              at Monterey Car Week
+            </figcaption>
+          </div>
+        </div>
+        <div class="col col-lg-2 col-12">
+          <button class="btn btn-lg btn-outline-warning fw-light">
+            READ MORE
+          </button>
+        </div>
+      </div>
     </div>
     <!-- telegram start -->
-    <div class="container p-5 bg-dark mt-5 border rounded border-0 d-flex">
-      <i
-        class="bi bi-telegram btn btn-outline-warning border-3 rounded-circle fs-1 p-5"
-      ></i>
-      <div class="ms-4 mt-3">
-        <h2 class="text-warning fs-3">POWER Inc. TELEGRAM</h2>
-        <p class="text-light fs-1">FOLLOW US ON TELEGRAM</p>
+    <div class="container bg-dark border rounded border-0 my-5">
+      <div class="row p-3">
+        <div class="col col-lg-1 col-sm-3 col-4">
+          <i
+            class="bi bi-telegram btn btn-outline-warning border-3 rounded-circle fs-1 p-4"
+          ></i>
+        </div>
+
+        <div class="col col-lg-10 col-sm-9 col-8">
+          <h2 class="text-warning fs-3 m-0">POWER Inc. TELEGRAM</h2>
+          <p class="text-light fs-1 m-0">FOLLOW US ON TELEGRAM</p>
+        </div>
       </div>
     </div>
     <!-- telegram end -->
@@ -723,14 +735,14 @@
 
     <div class="container p-0 border border-0 rounded bg-dark mt-5">
       <div class="row">
-        <div class="col col-sm-12 col-lg-6">
+        <div class="col col-sm-12 col-lg-6 col-12">
           <img
             class="image-fluid w-100"
             src="/image/news/cover.webp"
             alt="Not Found"
           />
         </div>
-        <div class="col col-sm-12 col-lg-6 text-start p-3">
+        <div class="col col-sm-12 col-lg-6 col-12 text-start p-3">
           <figcaption class="figure-caption text-light fw-light mt-3">
             6 November 2024
           </figcaption>
@@ -748,14 +760,14 @@
     </div>
     <div class="container p-0 border border-0 rounded bg-dark mt-5">
       <div class="row">
-        <div class="col col-sm-12 col-lg-6">
+        <div class="col col-sm-12 col-12 col-lg-6">
           <img
             class="image-fluid w-100"
             src="/image/news/cover2.webp"
             alt="Not Found"
           />
         </div>
-        <div class="col col-sm-12 col-lg-6 text-start p-3">
+        <div class="col col-sm-12 col-12 col-lg-6 text-start p-3">
           <figcaption class="figure-caption text-light fw-light">
             17 October 2024
           </figcaption>
@@ -772,14 +784,14 @@
     </div>
     <div class="container p-0 border border-0 rounded bg-dark mt-5">
       <div class="row">
-        <div class="col col-sm-12 col-lg-6">
+        <div class="col col-sm-12 col-12 col-lg-6">
           <img
             class="image-fluid w-100"
             src="/image/news/cover_3.webp"
             alt="Not Found"
           />
         </div>
-        <div class="col col-sm-12 col-lg-6 text-start p-3">
+        <div class="col col-sm-12 col-12 col-lg-6 text-start p-3">
           <figcaption class="figure-caption text-light fw-light">
             30 September 2024
           </figcaption>
@@ -802,14 +814,14 @@
     </div>
     <div class="container p-0 border border-0 rounded bg-dark mt-5">
       <div class="row">
-        <div class="col col-sm-12 col-lg-6">
+        <div class="col col-sm-12 col-12 col-lg-6">
           <img
             class="image-fluid w-100"
             src="/image/news/cover4.webp"
             alt="Not Found"
           />
         </div>
-        <div class="col col-sm-12 col-lg-6 text-start p-3">
+        <div class="col col-sm-12 col-12 col-lg-6 text-start p-3">
           <figcaption class="figure-caption text-light fw-light">
             19 July 2024
           </figcaption>
@@ -827,7 +839,7 @@
 
     <!-- news LETTER end -->
     <!-- load more button start -->
-    <div class="d-grid col-2 mx-auto my-5">
+    <div class="d-grid col-4 col-lg-2 mx-auto my-5">
       <button class="btn btn-outline-warning text-uppercase" type="button">
         load more
       </button>
@@ -839,18 +851,16 @@
       class="container p-2 text-center border border-3 border-warning rounded bg-black my-5"
     >
       <div class="row">
-        <div class="col col-sm-12 col-lg-6">
+        <div class="col col-12 col-sm-12 col-lg-6">
           <img
             class="image-fluid w-100"
             src="/image/logo.jpg"
             alt="Not Found"
           />
         </div>
-        <div class="col col-sm-12 col-lg-6">
-          <article
-            class="text-light text-start p-3 fs-4 border bg-dark border-warning border-1 shadow-lg mt-5 me-4"
-          >
-            <span class="display-5 text-warning sw-bold">POWER Inc.</span>
+        <div class="col col-12 col-sm-12 col-lg-6">
+          <article class="text-light text-start p-1 mt-5 mx-3 fs-4">
+            <span class="display-5 text-warning fw-bold">POWER Inc.</span>
             we curate dreams on wheels. Nestled in the glitz and glamour of Las
             Vegas, our flagship branch sets the stage for the finest luxury
             vehicles from across the globe. We proudly extend our legacy to two
@@ -1026,7 +1036,7 @@
     </div>
     <!-- comment section ends -->
     <!-- load more button start-->
-    <div class="d-grid col-2 col-sm-8 mx-auto">
+    <div class="d-grid col-2 col-sm-8 col-6 mx-auto">
       <button class="btn btn-outline-warning text-uppercase" type="button">
         more comments
       </button>
@@ -1053,7 +1063,7 @@
         ></a>
       </div>
       <div class="row ps-5">
-        <div class="col col-lg-1 col-sm-3 p-0">
+        <div class="col col-lg-1 col-sm-3 col-6 p-0">
           <p class="text-secondary fw-bold">Resources</p>
           <p class="my-1">
             <a
@@ -1077,7 +1087,7 @@
             </a>
           </p>
         </div>
-        <div class="col col-lg-1 col-sm-3 p-0">
+        <div class="col col-lg-1 col-sm-3 col-6 p-0">
           <p class="text-secondary fw-bold invisible">Resources</p>
           <p class="my-1">
             <a
@@ -1101,7 +1111,7 @@
             </a>
           </p>
         </div>
-        <div class="col col-lg-1 col-sm-3 p-0">
+        <div class="col col-lg-1 col-sm-3 col-6 p-0">
           <p class="text-secondary fw-bold">Others</p>
           <p class="my-1">
             <a
@@ -1125,7 +1135,7 @@
             </a>
           </p>
         </div>
-        <div class="col col-lg-1 col-sm-3 p-0">
+        <div class="col col-lg-1 col-sm-3 col-6 p-0">
           <p class="text-secondary fw-bold invisible">Resources</p>
           <p class="my-1">
             <a
@@ -1184,11 +1194,12 @@
         >
         <a
           href="#"
-          class="link link-underline-opacity-0 link-opacity-75-hover link-light px-3"
+          class="link link-underline-opacity-0 link-opacity-75-hover link-light px-4"
           >Our Customer Policy</a
         >
       </div>
     </footer>
+
     <!-- footer end -->
     <!-- bootstarp script -->
     <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
